--- a/craft_sicherungWebsite/templates/fuerSie/projektbesuch.html
+++ b/craft_sicherungWebsite/templates/fuerSie/projektbesuch.html
@@ -44,7 +44,7 @@
    <div id="copy" style="padding-bottom: 5rem;"> Das könnte Sie auch interessieren</div>
   </div>
 
-  {% set entry = craft.entries.section('fuerSie').slug('für-sie-daheim').one() %}
+  {% set entry = craft.entries.section('fuerSie').slug('daheim').one() %}
   {% include '_layouts/weiterleitungkorrekt' %}
 
 </div>
