--- a/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -207,14 +207,14 @@
 
 <div class="container-fluid no-padding" style="background-color: white; padding-bottom: 2.5rem; padding-top: 0;">
   <div class="container zwoelferspaltenlayout text-center">
-    {% set entry = craft.entries.section('projekte').slug('dorfentwicklung-chancen-für-dörfer').one() %}
+    {% set entry = craft.entries.section('projekte').slug('dorfentwicklung').one() %}
     <div id="anleser" style="padding-bottom: 5rem;"> Lernen Sie unsere weiteren Progamme kennen </div>
   </div>
 
   {% include '_layouts/weiterleitungmitzeilenumbruch' %}
   <div style="height: 2.5rem;"> </div>
 
-  {% set entry = craft.entries.section('projekte').slug('patenschaft').one() %}
+  {% set entry = craft.entries.section('projekte').slug('kinderpate').one() %}
 
   {% include '_layouts/weiterleitungmitzeilenumbruch' %}
 
