--- a/craft_sicherungWebsite/templates/spenden/patewerden.html
+++ b/craft_sicherungWebsite/templates/spenden/patewerden.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }}); padding-bottom: 30px; background-repeat: no-repeat; background-color: white;">
+<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }}); padding-bottom: 2rem; padding-top: 5rem; background-repeat: no-repeat; background-color: white;">
   <div class="container" style="max-width: 1280px;">
     <div class="row">
       <div class="col-md-2">
@@ -61,10 +61,10 @@
                     <span id="copy"> <strong> Werden Sie: </strong> </span>
                     <div class="row">
                       <div class="col-12">
-                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Länderpate in Peru</a>
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Peru" class="btn btn-primary" role="button">Länderpate in Peru</a>
                       </div>
                       <div class="col-12">
-                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Länderpate in Kenia</a>
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Kenia" class="btn btn-primary" role="button">Länderpate in Kenia</a>
                       </div>
                     </div>
                     <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
@@ -88,10 +88,10 @@
                         <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Dorfpate allgemein</a>
                       </div>
                       <div class="col-12">
-                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Dorfpate in Peru</a>
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=D%C3%B6rfer%20Peru" class="btn btn-primary" role="button">Dorfpate in Peru</a>
                       </div>
                       <div class="col-12">
-                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Dorfpate in Kenia</a>
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=D%C3%B6rfer%20Kenia" class="btn btn-primary" role="button">Dorfpate in Kenia</a>
                       </div>
                     </div>
                     <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
@@ -113,10 +113,10 @@
                     <span id="copy"> <strong> Werden Sie: </strong> </span>
                     <div class="row">
                       <div class="col-12">
-                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Kinderpate in Peru</a>
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Kinderpate%20Peru*" class="btn btn-primary" role="button">Kinderpate in Peru</a>
                       </div>
                       <div class="col-12">
-                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Kinderpate in Kenia</a>
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Kinderpate%20Kenia*" class="btn btn-primary" role="button">Kinderpate in Kenia</a>
                       </div>
                     </div>
                     <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
@@ -138,7 +138,7 @@
                     <span id="copy"> <strong> Werden Sie: </strong> </span>
                     <div class="row">
                       <div class="col-12">
-                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Waldpate in Peru</a>
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Naturschutz%20Peru" class="btn btn-primary" role="button">Waldpate in Peru</a>
                       </div>
                     </div>
                     <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
