--- a/craft_sicherungWebsite/templates/ueberUns/leitbild.html
+++ b/craft_sicherungWebsite/templates/ueberUns/leitbild.html
@@ -8,7 +8,7 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center no-padding" style="padding-top: 150px; position: relative;">
+<div class="container-fluid text-center no-padding" style="padding-top: 9rem; position: relative;">
 
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
@@ -69,7 +69,7 @@
 
   <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-ueber-uns-leitbild-kind.jpg').one().getUrl() }} ">
 
-<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem; padding-top: 4rem;">
+<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 5rem; padding-top: 4rem;">
   <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
   <p id="anleser" class="text-center"> Erfahren Sie mehr über uns </p>
   </div>
