--- a/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
+++ b/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
@@ -151,7 +151,7 @@
    <div id="anleser" style="padding-bottom: 5rem;"> Weitere Informationen zum Freiwilligendienst </div>
   </div>
 
-  {% set entry = craft.entries.section('fuerSie').slug('deine-bewerbung').one() %}
+  {% set entry = craft.entries.section('fuerSie').slug('bewerbung').one() %}
   {% include '_layouts/weiterleitungkorrekt'%}
 
   <div style="padding-bottom: 2.5rem;"></div>
