--- a/craft_sicherungWebsite/templates/fuerSie/freiwillig/weltwaerts.html
+++ b/craft_sicherungWebsite/templates/fuerSie/freiwillig/weltwaerts.html
@@ -60,7 +60,7 @@
     </div>
   </div>
 
-  {% set entry = craft.entries.section('fuerSie').slug('weitere-einsatzmöglichkeiten-in-peru').one() %}
+  {% set entry = craft.entries.section('fuerSie').slug('peru').one() %}
   {% include '_layouts/weiterleitungkorrekt' %}
 
 </div> <!-- Weißer Hintergrund-Div -->
