--- a/craft_sicherungWebsite/templates/fuerSie/freiwilligendienst.html
+++ b/craft_sicherungWebsite/templates/fuerSie/freiwilligendienst.html
@@ -37,8 +37,10 @@
           {% set counter = counter + 1 %}
           <div class="col-lg-4 col-md-6" style="padding-bottom: 40px; padding-left: 5px; padding-right: 5px;">
           <div class="card border-light h-100">
+            <a href="{{'https://aufbau-website.de/craft/web/fuerSie/freiwillig/' ~ entry.slug}}">
             <img class="card-img-top"
             src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+            </a>
             <div class="card-body">
                 <h3>{{ entry.title }}</h3>
                 <div id="copy"> {{ entry.anleser }} </div>
