--- a/craft_sicherungWebsite/templates/kontakt/index.html
+++ b/craft_sicherungWebsite/templates/kontakt/index.html
@@ -30,7 +30,7 @@
 
 <div class="container-fluid no-padding" style="background-color: white">
 
-<div class="container achterspaltenlayout" id="info-head" style="padding-top: 2rem;">
+<div class="container achterspaltenlayout" id="info-head" style="padding-top: 2rem; padding-bottom: 5rem;">
 
   {% macro errorList(errors) %}
     {% if errors %}
