--- a/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
@@ -117,23 +117,24 @@
 
 {% set entry = craft.entries.section('projekte').slug('kinderpate-werden').one() %}
 
-<div class="container-fluid"  style="background-image: url({{ entry.bild.one().url }});">
-  <div class="row">
-    <div class="col-lg-1 col-md-0">  </div>
-    <div class="col-lg-4 col-md-5" style="position: relative; min-height: 150px;">   <img class="mx-auto d-block" id="kind" style="max-width: 100%; bottom: 0; left: 0; " src="{{ entry.bild.inReverse().one().url }}"> </div>
-    <div class="col-lg-7 col-md-7" style="padding-left: 2rem; padding-right: 2rem;">
+<div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+  <div class="container zwoelferspaltenlayout" style="padding-top: 1rem;">
+    <div class="row">
+    <div class="col-md-5" style="position: relative; min-height: 150px;">   <img class="mx-auto d-block" id="kind" style="max-width: 100%; bottom: 0; left: 0; " src="{{ entry.bild.inReverse().one().url }}"> </div>
+    <div class="col-md-7" style="padding-left: 2rem; padding-right: 2rem;">
       <h4 style="color: white;"> {{ entry.title }} </h4>
       <div id="copy" style="color: white;"> {{ entry.text }}</div>
       <div class="row">
         <div class="col-sm-4">
-          <a href="https://aufbau-website.de/craft/web/spenden/patewerden.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate in Peru werden</a>
+          <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Kinderpate%20Peru*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate in Peru werden</a>
         </div> <div class="col-sm-2">  </div>
         <div class="col-sm-6">
-          <a href="https://aufbau-website.de/craft/web/spenden/patewerden.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate in Kenia werden</a>
+          <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Kinderpate%20Kenia*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate in Kenia werden</a>
         </div>
       </div>
     </div>
   </div>
+</div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
 <div class="container zwoelferspaltenlayout text-center" id="ganzheitlich" style="padding-bottom: 5rem;">
@@ -151,7 +152,7 @@
   </div>
 
 <div class="container zwoelferspaltenlayout text-center" style="padding-top: 3rem;">
-  {% set entry = craft.entries.section('projekte').slug('dorfentwicklung-chancen-für-dörfer').one() %}
+  {% set entry = craft.entries.section('projekte').slug('dorfentwicklung').one() %}
    <hr style="height: 1px; margin-top: 2rem; margin-bottom: 5rem;">
    <div id="anleser" style="padding-bottom: 5rem;"> Lernen Sie unsere weiteren Progamme kennen </div>
 </div>
