--- a/craft_sicherungWebsite/templates/ueberUns/empfehlungen.html
+++ b/craft_sicherungWebsite/templates/ueberUns/empfehlungen.html
@@ -37,15 +37,17 @@
       {% for entry in entries %}
       <div class="card bg-white" style="border:10px solid #f8f5f2; ;">
         <div class="wrapper" style="background-color: #f8f5f2; max-height: 95px;">
+          <a href="{{ 'https://aufbau-website.de/craft/web/ueber-uns/empfehlung/' ~ entry.slug }}">
         <img class="card-img-top rounded-circle" style="border:8px solid #f8f5f2; max-height: 160px; max-width: 160px; display: block; margin-left: auto; margin-right: auto;  width: 50;"
         src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+        </a>
       </div>
         <div class="card-body" style="padding-top: 3rem;">
           <p class="card-text">
             <h3> {{ entry.title }} </h3>
             <h4 style="margin-top: -.5rem;"> {{ entry.anleser }} </h4>
             <div id="copy"> {{ entry.text }}
-              <a href="{{ 'https://aufbau-website.de/craft/web/ueber-uns/empfehlung/' ~ entry.slug }}"> Weiterlesen</a>
+              <a href="{{ 'https://aufbau-website.de/craft/web/ueber-uns/empfehlung/' ~ entry.slug }}"> Weiterlesen > </a>
             </div>
           </p>
           </p>
@@ -87,7 +89,7 @@
 </div>
 
 
-<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem;">
+<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 5rem;">
 
 <div class="container zwoelferspaltenlayout" style="padding-top: 2rem;">
 <p id="anleser" class="text-center"> Erfahren Sie mehr über unser Engagement vor Ort </p>
