geht wieder nach umstellung auf neue datenbank

--- a/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
+++ b/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
@@ -168,6 +168,7 @@
   margin: 0;
   padding: 0;
   font-family: helvetica, sans-serif;
+  font-size: 16px;
 }
 .navbarMobilgeraet .multi-level,
 .navbarMobilgeraet .item ul,
@@ -263,7 +264,9 @@
   font-family: 'source_sans_prolight';
 }
 #fuerSieFreiwilligendienst ul, /*Padding der beiden untermenus setzen */
-#fuerSie ul {
+#fuerSie ul,
+#fuerSieDaheim ul,
+#projekteProgramme ul {
   padding: 0 2rem;"
 }
 
@@ -296,7 +299,7 @@
 
   <div class="multi-level" style="width: 100vw; height: 100vh;">
 
-    <div class="item" style="padding-left: 2em;" id="homeBox">
+    <div class="item" id="homeBox">
       <a href="https://aufbau-website.de/craft/web/" id="naviUeberschrift" style="padding-right: 20%; padding-top: 10%;">HOME</a>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
@@ -416,7 +419,7 @@
         <li> Freiwilligendienst </li> <hr>
         <li><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru oder Kenia</a></li> <hr>
         <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/peru.html">Weitere Einsatzmöglichkeiten in Peru</a></li> <hr>
-        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/bewerbung.html">Deine Bewerbung</a></li> <hr>
+        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/bewerbung-1.html">Deine Bewerbung</a></li> <hr>
         <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/erfahrungsberichte.html">Erfahrungsberichte</a></li> <hr>
       </ul>
     </div>
