--- a/craft_sicherungWebsite/templates/_layouts/footer.html
+++ b/craft_sicherungWebsite/templates/_layouts/footer.html
@@ -103,7 +103,7 @@
           <form class="form-inline" method="post" action="" accept-charset="UTF-8">
             {{ csrfInput() }}
             <input type="hidden" name="action" value="contact-form/send">
-            {{ redirectInput('contact/thanks') }}
+            {{ redirectInput('kontakt/danke') }}
 
             <input id="from-email" required class="form-control" type="email" style="background-color: #333333; margin-right: 1rem; padding-right: 3rem;" name="fromEmail" placeholder="Ihre E-Mail-Adresse" value="{{ message.fromEmail ?? '' }}">
             {{ message is defined and message ? errorList(message.getErrors('fromEmail')) }}
