--- a/craft_sicherungWebsite/templates/projekte/themen.html
+++ b/craft_sicherungWebsite/templates/projekte/themen.html
@@ -30,7 +30,7 @@
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-color: #ffffff;">
+<div class="container-fluid" style="background-color: #ffffff;">
 
   <div class="container achterspaltenlayout text-center" style="padding-top: 3rem; padding-bottom: 1rem;">
     {% set entry = craft.entries.section('projekte').slug('armutsbekämpfung').one() %}
@@ -65,7 +65,7 @@
 </div> <!-- Container für Carousel -->
 
 
-<div class="container-fluid no-padding" style="background-color: #ffffff; padding-top: 5rem;">
+<div class="container-fluid" style="background-color: #ffffff; padding-top: 5rem;">
 
   <div class="container achterspaltenlayout text-center" style="padding-bottom: 0;">
     {% set entry = craft.entries.section('projekte').slug('bildung').one() %}
@@ -95,7 +95,7 @@
   </div>
 </div> <!-- Container für Carousel -->
 
-<div class="container-fluid no-padding" style="background-color: #ffffff; padding-top: 5rem;">
+<div class="container-fluid" style="background-color: #ffffff; padding-top: 5rem;">
 
   <div class="container achterspaltenlayout text-center" style="padding-bottom: 0px;">
     {% set entry = craft.entries.section('projekte').slug('engagement').one() %}
@@ -124,7 +124,7 @@
 </div> <!-- Container für Carousel -->
 
 
-<div class="container-fluid no-padding" style="background-color: #ffffff; padding-top: 5rem;">
+<div class="container-fluid" style="background-color: #ffffff; padding-top: 5rem;">
 
   <div class="container achterspaltenlayout text-center" style="padding-bottom: 0px;">
     {% set entry = craft.entries.section('projekte').slug('soziales').one() %}
@@ -154,7 +154,7 @@
   </div>
 </div> <!-- Container für Carousel -->
 
-<div class="container-fluid no-padding" style="background-color: #ffffff; padding-top: 5rem;">
+<div class="container-fluid" style="background-color: #ffffff; padding-top: 5rem;">
 
   <div class="container achterspaltenlayout text-center" style="padding-bottom: 0px;">
     {% set entry = craft.entries.section('projekte').slug('umwelt-und-naturschutz-1').one() %}
@@ -200,7 +200,7 @@
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
 
-<div class="container-fluid no-padding" style="background-color: #ffffff; padding-bottom: 3rem;">
+<div class="container-fluid" style="background-color: #ffffff; padding: 5rem 0;">
 
   <div class="container achterspaltenlayout" id="info" style="padding-bottom: 0px;">
     <h4 style="margin-bottom: 0;"> Quellen: </h4>
